<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/instructionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:onClick="onInstructionBtnClick"
        android:text="@string/instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="onMenuBtn1click"
        android:text="@string/menuBtn1"
        app:layout_constraintEnd_toEndOf="@+id/instructionBtn"
        app:layout_constraintStart_toStartOf="@+id/instructionBtn"
        app:layout_constraintTop_toBottomOf="@+id/instructionBtn" />

    <Button
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="onMenuBtn2click"
        android:text="@string/menuBtn2"
        app:layout_constraintEnd_toEndOf="@+id/Measure"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Measure"
        app:layout_constraintTop_toBottomOf="@+id/Measure" />
</androidx.constraintlayout.widget.ConstraintLayout>